use cmake_layout

--- a/conA/CMakeLists.txt
+++ b/conA/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.15)
 
 project(Hello2)
 
-add_executable(hello2 main.c)
+add_executable(hello2 src/main.c)
 install(TARGETS hello2 DESTINATION bin)
 
